--- a/templates/configs/configs-dep.yaml
+++ b/templates/configs/configs-dep.yaml
@@ -23,11 +23,7 @@ spec:
         {{- toYaml . | nindent 8 }}
         {{- end }}
       annotations:
-{{- if .Values.useExternalConfig }}
-        checksum/config: {{ .Values.externalConfigVersion }}
-{{- else }}
-        checksum/config: {{ include (print $.Template.BasePath "/secret.yaml") . | sha256sum }}
-{{- end }}
+        checksum/config: {{ include "cortex.configChecksum" . }}
         {{- with .Values.configs.podAnnotations }}
         {{- toYaml . | nindent 8 }}
         {{- end }}
@@ -110,13 +106,7 @@ spec:
         {{- toYaml .Values.configs.tolerations | nindent 8 }}
       terminationGracePeriodSeconds: {{ .Values.configs.terminationGracePeriodSeconds }}
       volumes:
-        - name: config
-          secret:
-          {{- if .Values.useExternalConfig }}
-            secretName: {{ .Values.externalConfigSecretName }}
-          {{- else }}
-            secretName: {{ template "cortex.fullname" . }}
-          {{- end }}
+        {{- include "cortex.configVolume" . | nindent 8 }}
         {{- if .Values.configsdb_postgresql.enabled }}
         - name: postgres-password
           secret:
