--- a/templates/secret.yaml
+++ b/templates/secret.yaml
@@ -1,4 +1,4 @@
-{{- if not .Values.useExternalConfig }}
+{{- if (and (not .Values.useExternalConfig) (not .Values.useConfigMap)) }}
 apiVersion: v1
 kind: Secret
 metadata:
