--- a/.github/workflows/renovate-config-validator.yml
+++ b/.github/workflows/renovate-config-validator.yml
@@ -11,6 +11,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@ec3a7ce113134d7a93b817d10a8272cb61118579 # renovate: tag=v2
+        uses: actions/checkout@v2
       - name: Validate
-        uses: rinchsan/renovate-config-validator@a23252a58ffce3bb0a8e481422e16ca8e4730b84 # renovate: tag=v0.0.9
+        uses: rinchsan/renovate-config-validator@v0.0.9
