--- a/.github/workflows/renovate-config-validator.yml
+++ b/.github/workflows/renovate-config-validator.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   validate:
-    name: Validate renovate config
+    name: validate
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
