Disable ingester startup probe by default.
Following up on #263, we should disable ingester startup probes by
default, since the cortex docs note that killing ingesters "should not
be left to a machine". I've also noticed restart loops due to the
startup probe when starting ingesters after downtime, when remote
writers have a backlogs of metrics to send.

Signed-off-by: Josh Carp <jm.carp@gmail.com>

--- a/templates/ingester/ingester-statefulset.yaml
+++ b/templates/ingester/ingester-statefulset.yaml
@@ -127,12 +127,14 @@ spec:
             - name: gossip
               containerPort: {{ .Values.config.memberlist.bind_port }}
               protocol: TCP
+          {{- if .Values.ingester.startupProbe }}
           startupProbe:
             {{- toYaml .Values.ingester.startupProbe | nindent 12 }}
+          {{- end }}
           {{- if .Values.ingester.livenessProbe }}
           livenessProbe:
             {{- toYaml .Values.ingester.livenessProbe | nindent 12 }}
-          {{- end}}
+          {{- end }}
           readinessProbe:
             {{- toYaml .Values.ingester.readinessProbe | nindent 12 }}
           resources:
