Use port numbers instead of names in prometheus annotations.
Prometheus scrape configs often use the `prometheus.io/port` annotation
to configure targets per pod:

```
- source_labels: [__address__, __meta_kubernetes_pod_annotation_prometheus_io_port]
  action: replace
  regex: ([^:]+)(?::\d+)?;(\d+)
  replacement: $1:$2
  target_label: __address__
```

This rule only matches when the `prometheus.io/port` annotation is a
port number, and it's not clear to me how the scrape config could be
modified to work with port names. To make the chart compatible with
standard prometheus scrape configs, this patch changes the default port
annotation from port names to port numbers.

Signed-off-by: Josh Carp <jm.carp@gmail.com>

--- a/values.yaml
+++ b/values.yaml
@@ -201,7 +201,7 @@ alertmanager:
   # -- Pod Annotations
   podAnnotations:
     prometheus.io/scrape: 'true'
-    prometheus.io/port: 'http-metrics'
+    prometheus.io/port: '8080'
 
   nodeSelector: {}
   affinity: {}
@@ -345,7 +345,7 @@ distributor:
   # -- Pod Annotations
   podAnnotations:
     prometheus.io/scrape: 'true'
-    prometheus.io/port: 'http-metrics'
+    prometheus.io/port: '8080'
 
   nodeSelector: {}
   affinity:
@@ -453,7 +453,7 @@ ingester:
   # -- Pod Annotations
   podAnnotations:
     prometheus.io/scrape: 'true'
-    prometheus.io/port: 'http-metrics'
+    prometheus.io/port: '8080'
 
   nodeSelector: {}
   affinity:
@@ -605,7 +605,7 @@ ruler:
   # -- Pod Annotations
   podAnnotations:
     prometheus.io/scrape: 'true'
-    prometheus.io/port: 'http-metrics'
+    prometheus.io/port: '8080'
 
   nodeSelector: {}
   affinity: {}
@@ -723,7 +723,7 @@ querier:
   # -- Pod Annotations
   podAnnotations:
     prometheus.io/scrape: 'true'
-    prometheus.io/port: 'http-metrics'
+    prometheus.io/port: '8080'
 
   nodeSelector: {}
   affinity:
@@ -825,7 +825,7 @@ query_frontend:
   # -- Pod Annotations
   podAnnotations:
     prometheus.io/scrape: 'true'
-    prometheus.io/port: 'http-metrics'
+    prometheus.io/port: '8080'
 
   nodeSelector: {}
   affinity:
@@ -915,7 +915,7 @@ table_manager:
   # -- Pod Annotations
   podAnnotations:
     prometheus.io/scrape: 'true'
-    prometheus.io/port: 'http-metrics'
+    prometheus.io/port: '8080'
 
   nodeSelector: {}
   affinity: {}
@@ -994,7 +994,7 @@ configs:
   # -- Pod Annotations
   podAnnotations:
     prometheus.io/scrape: 'true'
-    prometheus.io/port: 'http-metrics'
+    prometheus.io/port: '8080'
 
   nodeSelector: {}
   affinity: {}
@@ -1105,9 +1105,7 @@ nginx:
   podLabels: {}
 
   # -- Pod Annotations
-  podAnnotations:
-    prometheus.io/scrape: ''
-    prometheus.io/port: 'http-metrics'
+  podAnnotations: {}
 
   nodeSelector: {}
   affinity: {}
@@ -1195,7 +1193,7 @@ store_gateway:
   # -- Pod Annotations
   podAnnotations:
     prometheus.io/scrape: 'true'
-    prometheus.io/port: 'http-metrics'
+    prometheus.io/port: '8080'
 
   nodeSelector: {}
   affinity:
@@ -1313,7 +1311,7 @@ compactor:
   # -- Pod Annotations
   podAnnotations:
     prometheus.io/scrape: 'true'
-    prometheus.io/port: 'http-metrics'
+    prometheus.io/port: '8080'
 
   nodeSelector: {}
   affinity:
