--- a/values.yaml
+++ b/values.yaml
@@ -1046,6 +1046,7 @@ nginx:
   enabled: true
   replicas: 2
   http_listen_port: 80
+  redirectUrl: ""
   config:
     dnsResolver: kube-dns.kube-system.svc.cluster.local
     # -- ref: http://nginx.org/en/docs/http/ngx_http_core_module.html#client_max_body_size
