--- a/templates/nginx/nginx-config.yaml
+++ b/templates/nginx/nginx-config.yaml
@@ -40,7 +40,6 @@ data:
       server { # simple reverse-proxy
         listen {{ .Values.nginx.http_listen_port }};
         root /home/app;
-        index all-services.html;
         proxy_connect_timeout 300s;
         proxy_send_timeout 300s;
         proxy_read_timeout 300s;
@@ -69,7 +68,7 @@ data:
           return 200 'alive';
         }
 
-        location / {
+        location = / {
           if ($arg_redirect) {
             proxy_pass $arg_redirect;
           }
@@ -77,7 +76,7 @@ data:
           try_files '' /all-services.html =404;
         }
 
-        location /config {
+        location ~ ^/(services|config|memberlist|ring|runtime_config) {
           if ($arg_redirect) {
             proxy_pass $arg_redirect;
           }
