fix renovate assignee
Signed-off-by: nschad <niclas.schad@gmail.com>

--- a/renovate.json
+++ b/renovate.json
@@ -6,7 +6,7 @@
         ":rebaseStalePrs"
     ],
     "assignees": [
-        "ShuzZzle",
+        "nschad",
         "kd7lxl"
     ],
     "labels": ["dependencies"],
