fix copyright date
Signed-off-by: nschad <niclas.schad@gmail.com>

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -10,4 +10,4 @@ github_username: cortexproject
 remote_theme: pmarsceill/just-the-docs
 # color_scheme: "dark"
 
-footer_content: "Copyright &copy; 2021-2022 cortexproject. Distributed by an <a href=\"https://github.com/cortexproject/cortex-helm-chart/blob/master/LICENSE\">Apache License 2.0.</a>"
+footer_content: "Copyright &copy; 2022 cortexproject. Distributed by an <a href=\"https://github.com/cortexproject/cortex-helm-chart/blob/master/LICENSE\">Apache License 2.0.</a>"
