--- a/values.yaml
+++ b/values.yaml
@@ -620,8 +620,6 @@ ruler:
   nodeSelector: {}
   affinity: {}
   annotations: {}
-  persistentVolume:
-    subPath:
 
   startupProbe:
     httpGet:
@@ -689,7 +687,7 @@ ruler:
     # Don't set a value to filter by any value
     labelValue: ""
     # -- Folder where the files should be placed.
-    folder: /tmp/rules
+    folder: /data/rules
     # -- The default folder name, it will create a subfolder under the `folder` and put rules in there instead
     defaultFolderName: ""
     # -- The Namespace(s) from which resources will be watched.
