--- a/templates/distributor/distributor-dep.yaml
+++ b/templates/distributor/distributor-dep.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.distributor.enabled -}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -116,3 +117,4 @@ spec:
         {{- if .Values.distributor.extraVolumes }}
         {{- toYaml .Values.distributor.extraVolumes | nindent 8}}
         {{- end }}
+{{- end }}
