--- a/templates/distributor/distributor-svc-headless.yaml
+++ b/templates/distributor/distributor-svc-headless.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.distributor.enabled -}}
 apiVersion: v1
 kind: Service
 metadata:
@@ -21,3 +22,4 @@ spec:
       targetPort: grpc
   selector:
     {{- include "cortex.distributorSelectorLabels" . | nindent 4 }}
+{{- end }}
