--- a/templates/distributor/distributor-svc.yaml
+++ b/templates/distributor/distributor-svc.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.distributor.enabled -}}
 apiVersion: v1
 kind: Service
 metadata:
@@ -19,3 +20,4 @@ spec:
       targetPort: http-metrics
   selector:
     {{- include "cortex.distributorSelectorLabels" . | nindent 4 }}
+{{- end }}
