--- a/templates/querier/querier-dep.yaml
+++ b/templates/querier/querier-dep.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.querier.enabled -}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -110,3 +111,4 @@ spec:
         {{- if .Values.querier.extraVolumes }}
         {{- toYaml .Values.querier.extraVolumes | nindent 8}}
         {{- end }}
+{{- end -}}
