--- a/templates/querier/querier-svc.yaml
+++ b/templates/querier/querier-svc.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.querier.enabled -}}
 apiVersion: v1
 kind: Service
 metadata:
@@ -19,3 +20,4 @@ spec:
       targetPort: http-metrics
   selector:
     {{- include "cortex.querierSelectorLabels" . | nindent 4 }}
+{{- end -}}
