--- a/templates/distributor/distributor-hpa.yaml
+++ b/templates/distributor/distributor-hpa.yaml
@@ -1,5 +1,5 @@
+{{- if and .Values.distributor.enable .Values.distributor.autoscaling.enabled }}
 {{- with .Values.distributor.autoscaling -}}
-{{- if .enabled }}
 apiVersion: autoscaling/v2beta2
 kind: HorizontalPodAutoscaler
 metadata:
