--- a/templates/ingester/ingester-hpa.yaml
+++ b/templates/ingester/ingester-hpa.yaml
@@ -1,6 +1,5 @@
-{{- if .Values.ingester.enabled -}}
+{{- if and .Values.ingester.enabled .Values.ingester.autoscaling.enabled -}}
 {{- with .Values.ingester.autoscaling -}}
-{{- if .enabled }}
 apiVersion: autoscaling/v2beta2
 kind: HorizontalPodAutoscaler
 metadata:
@@ -26,6 +25,5 @@ spec:
   behavior:
     {{- toYaml . | nindent 4 }}
   {{- end }}
-{{- end }}
 {{- end }}
 {{- end }}
