--- a/templates/ingester/ingester-hpa.yaml
+++ b/templates/ingester/ingester-hpa.yaml
@@ -1,5 +1,5 @@
+{{- if and .Values.ingester.enabled .Values.ingester.autoscaling.enabled -}}
 {{- with .Values.ingester.autoscaling -}}
-{{- if .enabled }}
 apiVersion: autoscaling/v2beta2
 kind: HorizontalPodAutoscaler
 metadata:
