Exclude cortex components endpoint from nginx config when disabled (#326)
* Exclude cortex components endpoint from nginx config when disabled

Signed-off-by: Bill Cassanova <wssanova@us.ibm.com>

--- a/templates/nginx/nginx-config.yaml
+++ b/templates/nginx/nginx-config.yaml
@@ -67,6 +67,8 @@ data:
           return 200 'alive';
         }
 
+        {{- if .Values.distributor.enabled }}
+
         # Distributor Config
         location = /ring {
           proxy_pass      http://{{ template "cortex.fullname" . }}-distributor.{{ $rootDomain }}$request_uri;
@@ -85,6 +87,10 @@ data:
           proxy_pass      http://{{ template "cortex.fullname" . }}-distributor.{{ $rootDomain }}$request_uri;
         }
 
+        {{- end }}
+
+        {{- if .Values.alertmanager.enabled }}
+
         # Alertmanager Config
         location ~ /api/prom/alertmanager/.* {
           proxy_pass      http://{{ template "cortex.fullname" . }}-alertmanager.{{ $rootDomain }}$request_uri;
@@ -102,6 +108,10 @@ data:
           proxy_pass      http://{{ template "cortex.fullname" . }}-alertmanager.{{ $rootDomain }}/api/v1/alerts;
         }
 
+        {{- end }}
+
+        {{- if .Values.ruler.enabled }}
+
         # Ruler Config
         location ~ /api/v1/rules {
           proxy_pass      http://{{ template "cortex.fullname" . }}-ruler.{{ $rootDomain }}$request_uri;
@@ -115,10 +125,18 @@ data:
           proxy_pass      http://{{ template "cortex.fullname" . }}-ruler.{{ $rootDomain }}$request_uri;
         }
 
+        {{- end }}
+
+        {{- if .Values.configs.enabled }}
+
         # Config Config
         location ~ /api/prom/configs/.* {
           proxy_pass      http://{{ template "cortex.fullname" . }}-configs.{{ $rootDomain }}$request_uri;
         }
+
+        {{- end }}
+
+        {{- if .Values.query_frontend.enabled }}
 
         # Query Config
         location ~ /api/prom/.* {
@@ -133,6 +151,9 @@ data:
         location ~ {{.Values.config.api.prometheus_http_prefix}}/api/v1/label/.* {
           proxy_pass      http://{{ template "cortex.fullname" . }}-query-frontend.{{ $rootDomain }}$request_uri;
         }
+
+        {{- end }}
+
         {{- if and (.Values.config.auth_enabled) (.Values.nginx.config.auth_orgs) }}
         # Auth orgs
         {{- range $org := compact .Values.nginx.config.auth_orgs | uniq }}
