fix: Non headless service should not be named 'headless'

--- a/charts/cortex/templates/store-gateway/store-gateway-svc.yaml
+++ b/charts/cortex/templates/store-gateway/store-gateway-svc.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "cortex-store-gateway.headlessname" . }}
+  name: {{ template "cortex-store-gateway.fullname" . }}
   labels: {{ include "cortex-store-gateway.labels" . | nindent 4 }}
     {{- with .Values.store_gateway.service.labels }}
     {{- toYaml . | nindent 4 }}
