fix: nginx port naming

--- a/charts/cortex/templates/nginx/nginx-dep.yaml
+++ b/charts/cortex/templates/nginx/nginx-dep.yaml
@@ -61,7 +61,7 @@ spec:
               readOnly: true
             {{- end }}
           ports:
-            - name: http
+            - name: http-metrics
               containerPort: {{ .Values.nginx.http_listen_port }}
               protocol: TCP
           startupProbe:
