Fix typo introduced in #319
Signed-off-by: elliottmb <2555214+elliottmb@users.noreply.github.com>

--- a/templates/distributor/distributor-hpa.yaml
+++ b/templates/distributor/distributor-hpa.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.distributor.enable .Values.distributor.autoscaling.enabled }}
+{{- if and .Values.distributor.enabled .Values.distributor.autoscaling.enabled }}
 {{- with .Values.distributor.autoscaling -}}
 apiVersion: autoscaling/v2beta2
 kind: HorizontalPodAutoscaler
