--- a/templates/compactor/compactor-statefulset.yaml
+++ b/templates/compactor/compactor-statefulset.yaml
@@ -71,6 +71,10 @@ spec:
       {{- end }}
       nodeSelector:
         {{- toYaml .Values.compactor.nodeSelector | nindent 8 }}
+      {{- if .Values.compactor.topologySpreadConstraints }}
+      topologySpreadConstraints:
+      {{- toYaml .Values.compactor.topologySpreadConstraints | nindent 8}}
+      {{- end }}
       affinity:
         {{- toYaml .Values.compactor.affinity | nindent 8 }}
       tolerations:
