--- a/templates/distributor/distributor-dep.yaml
+++ b/templates/distributor/distributor-dep.yaml
@@ -102,6 +102,10 @@ spec:
       {{- end }}
       nodeSelector:
         {{- toYaml .Values.distributor.nodeSelector | nindent 8 }}
+      {{- if .Values.distributor.topologySpreadConstraints }}
+      topologySpreadConstraints:
+      {{- toYaml .Values.distributor.topologySpreadConstraints | nindent 8}}
+      {{- end }}
       affinity:
         {{- toYaml .Values.distributor.affinity | nindent 8 }}
       tolerations:
