--- a/templates/configs/configs-dep.yaml
+++ b/templates/configs/configs-dep.yaml
@@ -100,6 +100,10 @@ spec:
       {{- end }}
       nodeSelector:
         {{- toYaml .Values.configs.nodeSelector | nindent 8 }}
+      {{- if .Values.configs.topologySpreadConstraints }}
+      topologySpreadConstraints:
+      {{- toYaml .Values.configs.topologySpreadConstraints | nindent 8}}
+      {{- end }}
       affinity:
         {{- toYaml .Values.configs.affinity | nindent 8 }}
       tolerations:
