--- a/templates/ruler/ruler-dep.yaml
+++ b/templates/ruler/ruler-dep.yaml
@@ -163,6 +163,10 @@ spec:
         {{- end }}
       nodeSelector:
         {{- toYaml .Values.ruler.nodeSelector | nindent 8 }}
+      {{- if .Values.ruler.topologySpreadConstraints }}
+      topologySpreadConstraints:
+      {{- toYaml .Values.ruler.topologySpreadConstraints | nindent 8}}
+      {{- end }}
       affinity:
         {{- toYaml .Values.ruler.affinity | nindent 8 }}
       tolerations:
