--- a/templates/store-gateway/store-gateway-statefulset.yaml
+++ b/templates/store-gateway/store-gateway-statefulset.yaml
@@ -71,6 +71,10 @@ spec:
       {{- end }}
       nodeSelector:
         {{- toYaml .Values.store_gateway.nodeSelector | nindent 8 }}
+      {{- if .Values.store_gateway.topologySpreadConstraints }}
+      topologySpreadConstraints:
+      {{- toYaml .Values.store_gateway.topologySpreadConstraints | nindent 8}}
+      {{- end }}
       affinity:
         {{- toYaml .Values.store_gateway.affinity | nindent 8 }}
       tolerations:
