--- a/values.yaml
+++ b/values.yaml
@@ -1277,9 +1277,7 @@ nginx:
     #     X-Scope-OrgID: $remote_user
     basicAuthSecretName: ""
     # -- (optional) Including the valid parameter to the `resolver` directive to re-resolve names every `dnsValid` seconds/minutes
-    dnsValid: ""
-    # -- (optional) If true Nginx will use the distributor headless service for `/ring` path. See https://github.com/kubernetes/kubernetes/issues/24092
-    distributorHeadless: false
+    dnsTTL: "15s"
   image:
     repository: nginx
     tag: 1.21
